--- a/style.css
+++ b/style.css
@@ -27,25 +27,34 @@ body{
     width: 600px;
     height: 450px;
 }
-.content img{
+.img-wrapper{
     width: 50%;
-    height: auto;
-    display: block;
+    height: 100%;
+    overflow: hidden;
 }
-.content .right-content{
+
+.img-wrapper img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+}
+ .content .right-content{
     padding: 30px;
     width: 50%;
 }
-.right-content h4{
+.right-content h2{
     color: hsl(228, 12%, 48%);
     letter-spacing: 3px;
     text-transform: uppercase;
     font-size: 12px;
-    margin-bottom: 20px;
     font-weight: 500;
 }
+.right-content h2.perfume{
+    margin-bottom: 20px;
+}
 .right-content h1{
-    font-size: 30px;
+    font-size: 35px;
     margin-bottom: 20px;
     color: hsl(212, 21%, 14%);
     font-family: 'Fraunces', serif;
@@ -60,6 +69,7 @@ body{
 }
 .price-section{
     display: flex;
+    justify-content: start;
     align-items: center;
     margin-bottom: 20px;
 }       
@@ -86,7 +96,7 @@ button{
     border: none;
     border-radius: 10px;
     color: white;
-    font-size: 14px;
+    font-size: 12px;
     cursor: pointer;
     font-weight: 700;
     box-shadow: 0 5px 10px rgba(22, 160, 133, 0.2);
@@ -110,11 +120,9 @@ button:hover{
         flex-direction: column;
         height: auto;
     }
-    .content #img{
+    .content .img-wrapper{
         content: url('assests/image-product-mobile.jpg');
         width: 100%;
-        max-height: 400px;
-        height: auto;
     }
     .content .right-content{
         width: 100%;
@@ -127,17 +135,25 @@ button:hover{
     }
     
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
+    .content{
+        width: 80%;
+        flex-direction: column;
+        height: auto;
+    }
+    .content .right-content {
+        padding: 25px;
+    }
     .right-content h1{
-        font-size: 24px;
+        font-size: 28px;
     }
     .right-content p{
         font-size: 12px;
     }   
     .price-section h2{
-        font-size: 24px;
+        font-size: 28px;
     }
     .price-section h3{
-        font-size: 12px;
+        font-size: 10px;
     }
 }
